Dedicated readme for the examples/jvmlauncher example